--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -24,7 +24,7 @@
                     required
                 />
                 <img
-                    src="assets/images/icon-invalid.svg"
+                    src="assets/icon-invalid.svg"
                     alt=""
                     class="contact__invalid-icon"
                     width="24"
@@ -41,7 +41,7 @@
                     required
                 />
                 <img
-                    src="assets/images/icon-invalid.svg"
+                    src="assets/icon-invalid.svg"
                     alt=""
                     class="contact__invalid-icon"
                     width="24"
@@ -59,7 +59,7 @@
                     required
                 ></textarea>
                 <img
-                    src="assets/images/icon-invalid.svg"
+                    src="assets/icon-invalid.svg"
                     alt=""
                     class="contact__invalid-icon"
                     width="24"
