--- a/src/templates/hero.html
+++ b/src/templates/hero.html
@@ -4,7 +4,7 @@
             <div class="hero__text">
                 <h1 class="hero__headline header-xl">
                     Nice to<br />
-                    meet you! I'm <span>Joaquin Gottlebe</span>.
+                    meet you! I'm <span>huaqo</span>.
                 </h1>
                 <p class="hero__description">
                     A developer, based in Berlin, passionate about building
