--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -11,9 +11,9 @@
         rel="icon"
         type="image/png"
         sizes="32x32"
-        href="assets/images/favicon-32x32.png"
+        href="assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>joaquingottlebe</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
