--- a/src/templates/post_head.html
+++ b/src/templates/post_head.html
@@ -11,8 +11,8 @@
         rel="icon"
         type="image/png"
         sizes="32x32"
-        href="../assets/images/favicon-32x32.png"
+        href="../assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>{{ title }}</title>
 </head>
