--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -1,19 +1,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap"
-        rel="stylesheet"
-    />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link
         rel="icon"
         type="image/png"
         sizes="32x32"
-        href="assets/favicon-32x32.png"
+        href="{{ asset_path }}favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>joaquingottlebe</title>
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <link rel="stylesheet" href="{{ asset_path }}style.css" />
+    <title>{{ title }}</title>
 </head>
