--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,7 +1,7 @@
-<header class="header">
-    <h2 class="visually-hidden">Header</h2>
-    <div class="wrapper">
-        <nav class="header__nav">
-        </nav>
-    </div>
+<header >
+	<nav>
+		<b>huaqo.github.io</b><br>
+		<a href="/">about</a><br>
+		{{ pages_links  }}
+	</nav>
 </header>
